structure of page design define

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -1,6 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,700&display=swap');
 html {
   min-height: 100vh;
 }
+
 
 body {
   margin: 0;
@@ -10,6 +13,7 @@ body {
 
   #root {
     height: 100%;
+    
   }
 
   * {
