Created a stable react with typescript setup

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -4,12 +4,12 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
+  font-family: "Nunito Sans", Arial, Helvetica, sans-serif;
   font-size: 100%;
   height: 100vh;
 
   #root {
-    height: 100%;
+    // height: 100%;
   }
 
   * {
